[package]
name = "shuttle-turmoil"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Run turmoil-net simulations under Shuttle's deterministic scheduler"
repository = "https://github.com/awslabs/shuttle"

[lib]
name = "shuttle_turmoil"
path = "src/lib.rs"
doctest = false

[dependencies]
shuttle = { path = "../shuttle" }
turmoil-net = { path = "../../turmoil/crates/turmoil-net", features = ["shuttle"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
